--- a/HR-Monitor/src/View/adminAccount.fxml
+++ b/HR-Monitor/src/View/adminAccount.fxml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.Pane?>
 
-<Pane fx:id="viewNewAccountPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="600.0" style="-fx-background-color: #222D41;" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1">
+<Pane fx:id="viewNewAccountPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="600.0" style="-fx-background-color: #222D41;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
     <children>
         <Label layoutX="34.0" layoutY="55.0" style="-fx-text-fill: #ecf0f1;" text="Last name" />
         <Label layoutX="36.0" layoutY="152.0" style="-fx-text-fill: #ecf0f1;" text="Password" />
@@ -18,12 +23,12 @@
         <TextField fx:id="userNameTextField" layoutX="176.0" layoutY="96.0" onKeyReleased="#onCheckNewUserName" prefHeight="26.0" prefWidth="178.0" />
         <PasswordField fx:id="newPasswordField" layoutX="176.0" layoutY="144.0" onKeyReleased="#onCheckPasswordComplexity" prefHeight="26.0" prefWidth="178.0" />
         <PasswordField fx:id="confirmPasswordField" layoutX="176.0" layoutY="193.0" onAction="#onCheckConfirmPassword" onKeyReleased="#onCheckConfirmPassword" prefHeight="26.0" prefWidth="178.0" />
-        <Label fx:id="checkValidityUserName" layoutX="355.0" layoutY="153.0" prefHeight="26.0" prefWidth="26.0" />
-        <Label fx:id="checkValidityPassword" layoutX="355.0" layoutY="229.0" prefHeight="26.0" prefWidth="26.0" />
-        <Label fx:id="checkPassword" layoutX="355.0" layoutY="197.0" prefHeight="26.0" prefWidth="26.0" />
+        <Label fx:id="checkValidityUserName" layoutX="355.0" layoutY="96.0" prefHeight="26.0" prefWidth="50.0" textFill="WHITE" />
+        <Label fx:id="checkValidityPassword" layoutX="355.0" layoutY="193.0" prefHeight="26.0" prefWidth="26.0" textFill="WHITE" />
+        <Label fx:id="checkPassword" layoutX="355.0" layoutY="148.0" prefHeight="26.0" prefWidth="26.0" textFill="WHITE" />
         <TextField fx:id="email" layoutX="176.0" layoutY="280.0" prefHeight="26.0" prefWidth="178.0" />
         <Label layoutX="34.0" layoutY="280.0" style="-fx-text-fill: #ecf0f1;" text="Email" />
-        <ComboBox fx:id="oldAdmin" layoutX="177.0" layoutY="322.0" onAction="#onInformAdmin" prefHeight="25.0" prefWidth="178.0" />
+        <ComboBox fx:id="admins" layoutX="177.0" layoutY="322.0" onAction="#onInformAdmin" prefHeight="25.0" prefWidth="178.0" />
         <Label layoutX="35.0" layoutY="326.0" style="-fx-text-fill: #ecf0f1;" text="Admin" />
         <ImageView fitHeight="60.0" fitWidth="60.0" layoutX="524.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true">
             <image>
