--- a/frontend/src/app/forms/steps/profile-picture/profile-picture.component.scss
+++ b/frontend/src/app/forms/steps/profile-picture/profile-picture.component.scss
@@ -11,6 +11,8 @@
   justify-content: center;
   color: var(--ion-color-primary-contrast);
   font-size: 80px;
+  padding: 1rem;
+  box-sizing: content-box;
   outline: none;
 }
 
