Additional information page  (#6)
* created additional-info component

* page is structured and data persistance

* added to the side menu

--- a/frontend/src/app/forms/forms.page.html
+++ b/frontend/src/app/forms/forms.page.html
@@ -68,7 +68,11 @@
           *ngSwitchCase="APPLICATION_STEP.KeyCompetencies"
         >
         </form-key-competencies>
-
+        <form-additional-info
+          [formsData]="formsData"
+          *ngSwitchCase="APPLICATION_STEP.AdditionalInformation"
+        >
+        </form-additional-info>
         <form-submit-page
           [formsData]="formsData"
           *ngSwitchCase="APPLICATION_STEP.Submit"
