Locale JSON and basic ngx translate config done

--- a/frontend/src/app/home/home.page.html
+++ b/frontend/src/app/home/home.page.html
@@ -34,13 +34,13 @@
         ></path>
       </svg>
 
-      <h1>Welcome to Consileon</h1>
-      <h3>We make the difference</h3>
+      <h1>{{'homePage.welcomeMessage' | translate}}</h1>
+      <h3>{{'homePage.welcomeTagline' | translate}}</h3>
     </div>
 
     <div class="button-container">
       <button class="fancy-button" (click)="startApplication()">
-        Apply now
+        {{'homePage.applyNow' | translate}}
       </button>
     </div>
   </div>
