--- a/HR-Monitor/src/View/adminAccount.fxml
+++ b/HR-Monitor/src/View/adminAccount.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
@@ -11,31 +10,30 @@
 
 <Pane fx:id="viewNewAccountPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="600.0" style="-fx-background-color: #222D41;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
     <children>
-        <Label layoutX="34.0" layoutY="55.0" style="-fx-text-fill: #ecf0f1;" text="Last name" />
-        <Label layoutX="36.0" layoutY="152.0" style="-fx-text-fill: #ecf0f1;" text="Password" />
-        <Label layoutX="34.0" layoutY="200.0" style="-fx-text-fill: #ecf0f1;" text="Confirm Password" />
+        <Label layoutX="34.0" layoutY="64.0" style="-fx-text-fill: #ecf0f1;" text="Last name" />
+        <Label layoutX="34.0" layoutY="169.0" style="-fx-text-fill: #ecf0f1;" text="Password" />
+        <Label layoutX="34.0" layoutY="213.0" style="-fx-text-fill: #ecf0f1;" text="Confirm Password" />
         <Button fx:id="create" layoutX="179.0" layoutY="391.0" mnemonicParsing="false" onAction="#createNewAccount" prefHeight="33.0" prefWidth="178.0" style="-fx-text-fill: #ecf0f1; -fx-background-color: #222D41; -fx-border-color: #ecf0f1;" text="Create" />
         <Button fx:id="back" layoutX="35.0" layoutY="391.0" mnemonicParsing="false" onAction="#onShowView" prefHeight="33.0" prefWidth="53.0" style="-fx-text-fill: #ecf0f1; -fx-background-color: #222D41; -fx-border-color: #ecf0f1;" text="Back" />
-        <Label layoutX="34.0" layoutY="105.0" style="-fx-text-fill: #ecf0f1;" text="Username" />
+        <Label layoutX="34.0" layoutY="118.0" style="-fx-text-fill: #ecf0f1;" text="Username" />
         <Label layoutX="34.0" layoutY="12.0" style="-fx-text-fill: #ecf0f1;" text="First name" />
         <TextField fx:id="firstNameTextField" layoutX="176.0" layoutY="10.0" prefHeight="26.0" prefWidth="178.0" />
-        <TextField fx:id="lastNameTextField" layoutX="176.0" layoutY="52.0" prefHeight="26.0" prefWidth="178.0" />
-        <TextField fx:id="userNameTextField" layoutX="176.0" layoutY="96.0" onKeyReleased="#onCheckNewUserName" prefHeight="26.0" prefWidth="178.0" />
-        <PasswordField fx:id="newPasswordField" layoutX="176.0" layoutY="144.0" onKeyReleased="#onCheckPasswordComplexity" prefHeight="26.0" prefWidth="178.0" />
-        <PasswordField fx:id="confirmPasswordField" layoutX="176.0" layoutY="193.0" onAction="#onCheckConfirmPassword" onKeyReleased="#onCheckConfirmPassword" prefHeight="26.0" prefWidth="178.0" />
-        <Label fx:id="checkValidityUserName" layoutX="355.0" layoutY="96.0" prefHeight="26.0" prefWidth="50.0" textFill="WHITE" />
-        <Label fx:id="checkValidityPassword" layoutX="355.0" layoutY="193.0" prefHeight="26.0" prefWidth="26.0" textFill="WHITE" />
-        <Label fx:id="checkPassword" layoutX="355.0" layoutY="148.0" prefHeight="26.0" prefWidth="26.0" textFill="WHITE" />
-        <TextField fx:id="email" layoutX="176.0" layoutY="280.0" prefHeight="26.0" prefWidth="178.0" />
-        <Label layoutX="34.0" layoutY="280.0" style="-fx-text-fill: #ecf0f1;" text="Email" />
-        <ComboBox fx:id="admins" layoutX="177.0" layoutY="322.0" onAction="#onInformAdmin" prefHeight="25.0" prefWidth="178.0" />
-        <Label layoutX="35.0" layoutY="326.0" style="-fx-text-fill: #ecf0f1;" text="Admin" />
-        <ImageView fitHeight="60.0" fitWidth="60.0" layoutX="524.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true">
+        <TextField fx:id="lastNameTextField" layoutX="176.0" layoutY="61.0" prefHeight="26.0" prefWidth="178.0" />
+        <TextField fx:id="userNameTextField" layoutX="176.0" layoutY="109.0" onKeyReleased="#onCheckNewUserName" prefHeight="26.0" prefWidth="178.0" />
+        <PasswordField fx:id="newPasswordField" layoutX="174.0" layoutY="161.0" onKeyReleased="#onCheckPasswordComplexity" prefHeight="26.0" prefWidth="178.0" />
+        <PasswordField fx:id="confirmPasswordField" layoutX="176.0" layoutY="206.0" onAction="#onCheckConfirmPassword" onKeyReleased="#onCheckConfirmPassword" prefHeight="26.0" prefWidth="178.0" />
+        <Label fx:id="checkValidityUserName" layoutX="356.0" layoutY="109.0" prefHeight="26.0" prefWidth="50.0" textFill="WHITE" />
+        <Label fx:id="checkValidityPassword" layoutX="355.0" layoutY="206.0" prefHeight="26.0" prefWidth="26.0" textFill="WHITE" />
+        <Label fx:id="checkPassword" layoutX="355.0" layoutY="161.0" prefHeight="26.0" prefWidth="26.0" textFill="WHITE" />
+        <TextField fx:id="email" layoutX="176.0" layoutY="301.0" onKeyReleased="#onCheckEmail" prefHeight="26.0" prefWidth="178.0" />
+        <Label layoutX="34.0" layoutY="301.0" style="-fx-text-fill: #ecf0f1;" text="Email" />
+        <ImageView fitHeight="105.0" fitWidth="123.0" layoutX="461.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true">
             <image>
                 <Image url="@../Style/Logo/Logo-idea-2-blackbg--logo.png" />
             </image>
         </ImageView>
-        <Label layoutX="34.0" layoutY="241.0" text="Password Hint" textFill="WHITE" />
-        <TextField fx:id="passwordHint" layoutX="176.0" layoutY="237.0" prefHeight="25.0" prefWidth="178.0" />
+        <Label layoutX="35.0" layoutY="253.0" text="Password Hint" textFill="WHITE" />
+        <TextField fx:id="passwordHint" layoutX="177.0" layoutY="249.0" prefHeight="25.0" prefWidth="178.0" />
+      <Label fx:id="checkValidityEmail" layoutX="357.0" layoutY="305.0" prefHeight="26.0" prefWidth="26.0" textFill="WHITE" />
     </children>
 </Pane>
