Improve image loading on the documents overview page

--- a/frontend/src/app/forms/common/base64-image/base64-image.component.html
+++ b/frontend/src/app/forms/common/base64-image/base64-image.component.html
@@ -1,2 +1,7 @@
-<ng-content *ngIf="!processedImage"></ng-content>
-<img [src]="processedImage.templateObjectUrl" *ngIf="processedImage" />
+<div class="loading" *ngIf="!processedImage">
+  <ng-content></ng-content>
+</div>
+
+<div class="image-container" *ngIf="processedImage">
+  <img [src]="processedImage.templateObjectUrl" />
+</div>
