--- a/frontend/src/app/forms/steps/documents/documents.component.scss
+++ b/frontend/src/app/forms/steps/documents/documents.component.scss
@@ -25,7 +25,7 @@
   padding-top: 100%;
   position: relative;
 }
-.make-square img {
+.make-square > * {
   position: absolute;
   top: 0;
   right: 0;
