--- a/frontend/src/app/forms/common/base64-image/base64-image.component.scss
+++ b/frontend/src/app/forms/common/base64-image/base64-image.component.scss
@@ -7,10 +7,11 @@
 }
 
 .image-container {
-  display: flex;
   width: 100%;
   height: 100%;
 }
 .image-container img {
   object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
