Privacy page messages added to I18N

--- a/frontend/src/app/forms/forms.page.html
+++ b/frontend/src/app/forms/forms.page.html
@@ -94,7 +94,7 @@
         (click)="navigateToNextStep()"
         *ngIf="currentStep !== APPLICATION_STEP.Submit"
       >
-        {{'formsPage.continue' | translate}}
+        {{'commonLables.continue' | translate}}
       </button>
     </div>
   </div>
