--- a/frontend/src/app/privacy/details/details.page.html
+++ b/frontend/src/app/privacy/details/details.page.html
@@ -5,14 +5,14 @@
         <ion-icon name="chevron-back-outline"></ion-icon>
       </ion-button>
     </ion-buttons>
-    <ion-title>Privacy Policy</ion-title>
+    <ion-title> {{'privacyPage.privacyPolicy' | translate}} </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <div class="main-container">
     <div class="description">
-      This is the text of the Privacy Policy
+      {{'privacyPage.dummyText' | translate}}
     </div>
   </div>
 </ion-content>
