--- a/frontend/src/app/forms/forms.page.html
+++ b/frontend/src/app/forms/forms.page.html
@@ -8,7 +8,7 @@
 
     <ion-title class="ion-text-center">
       <ng-container *ngIf="currentStep !== APPLICATION_STEP.Submit">
-        {{'formsPage.currentStep' | translate:{ currentStep:
+        {{'commonLables.currentStep' | translate:{ currentStep:
         currentStepIndex+1,totalSteps: APPLICATION_STEP_ARR.length-1} }}
       </ng-container>
 
