Documents upload step strings added to I18N

--- a/frontend/src/app/forms/steps/basic-info/basic-info.component.html
+++ b/frontend/src/app/forms/steps/basic-info/basic-info.component.html
@@ -1,7 +1,7 @@
 <div class="main-description">
   <h1>{{ 'basicInfo.welcome' | translate }}</h1>
 
-  {{ 'basicInfo.enterNameMessage' | translate }}
+  {{ 'basicInfo.stepDescription' | translate }}
 </div>
 
 <ion-list>
