--- a/frontend/src/app/forms/steps/contact-info/contact-info.component.html
+++ b/frontend/src/app/forms/steps/contact-info/contact-info.component.html
@@ -9,7 +9,7 @@
     }}<br />
   </span>
   <span>
-    {{ 'contactInfo.fillContactInfoMessage' | translate }}
+    {{ 'contactInfo.stepDescription' | translate }}
   </span>
 </div>
 
