--- a/frontend/src/app/forms/steps/documents/documents.component.html
+++ b/frontend/src/app/forms/steps/documents/documents.component.html
@@ -1,9 +1,7 @@
 <div class="main-description">
-  <h1>Documents</h1>
+  <h1>{{ 'documentsUpload.documents' | translate }}</h1>
 
-  In this step, you can take photos of documents you would like to include in
-  your application. For instance, you can take photos of your CV here. This step
-  is optional: If you don't want to add anyting, you can just skip it.
+  {{ 'documentsUpload.stepDescription' | translate }}
 </div>
 
 <div class="add-icon-container">
