--- a/frontend/src/app/forms/steps/profile-picture/profile-picture.component.html
+++ b/frontend/src/app/forms/steps/profile-picture/profile-picture.component.html
@@ -8,7 +8,7 @@
   "
 >
   <span class="description">
-    {{ 'profilePicture.addPictureMessage' | translate }}
+    {{ 'profilePicture.stepDescription' | translate }}
   </span>
   <button (click)="takePicture()" class="custom-button">
     <ion-icon name="person"></ion-icon>
