--- a/frontend/src/app/forms/steps/education-info-entry/education-info-entry.component.html
+++ b/frontend/src/app/forms/steps/education-info-entry/education-info-entry.component.html
@@ -1,12 +1,14 @@
 <ion-header class="ion-no-border">
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button (click)="cancel()">Cancel</ion-button>
+      <ion-button (click)="cancel()">{{
+        'commonLables.cancel' | translate
+      }}</ion-button>
     </ion-buttons>
     <ion-buttons slot="end">
-      <ion-button [disabled]="!education.valid" (click)="save()"
-        >Save</ion-button
-      >
+      <ion-button [disabled]="!education.valid" (click)="save()">{{
+        'commonLables.save' | translate
+      }}</ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
@@ -18,7 +20,7 @@
         <ion-icon slot="start" name="business-outline" size="large"></ion-icon>
         <ion-input
           type="text"
-          placeholder="School/University"
+          placeholder="{{ 'educationInfo.schoolOrUniversity' | translate }}"
           [formControl]="education.controls.university"
         >
         </ion-input>
@@ -28,18 +30,20 @@
         <ion-icon slot="start" name="book-outline" size="large"></ion-icon>
         <ion-input
           type="text"
-          placeholder="Subject"
+          placeholder="{{ 'educationInfo.subject' | translate }}"
           [formControl]="education.controls.subject"
         ></ion-input>
       </ion-item>
 
       <ion-item class="ion-no-padding entry-item">
         <ion-icon slot="start" name="school-outline" size="large"></ion-icon>
-        <ion-label color="medium">Degree</ion-label>
+        <ion-label color="medium">{{
+          'educationInfo.degree' | translate
+        }}</ion-label>
         <ion-select
           slot="end"
           interface="popover"
-          placeholder="Master"
+          placeholder="{{ 'educationInfo.master' | translate }}"
           [formControl]="education.controls.degree"
         >
           <ion-select-option
@@ -55,7 +59,7 @@
         <ion-icon slot="start" name="ribbon-outline" size="large"></ion-icon>
         <ion-input
           type="number"
-          placeholder="Grade"
+          placeholder="{{ 'educationInfo.grade' | translate }}"
           [formControl]="education.controls.grade"
         ></ion-input>
       </ion-item>
@@ -66,7 +70,7 @@
           displayFormat="YYYY"
           max="2030"
           min="1980"
-          placeholder="Graduation Year"
+          placeholder="{{ 'educationInfo.gradutaionYear' | translate }}"
           [formControl]="education.controls.graduationYear"
           class="ion-no-padding"
         ></ion-datetime>
