--- a/frontend/src/app/forms/steps/education-info/education-info.component.html
+++ b/frontend/src/app/forms/steps/education-info/education-info.component.html
@@ -1,8 +1,7 @@
 <div class="main-description">
-  <h1>Education Information</h1>
+  <h1>{{ 'educationInfo.educationInformation' | translate }}</h1>
 
-  Here, you can add your information regarding your education. So: What is your
-  educational background
+  {{ 'educationInfo.stepDescription' | translate }}
 
   <div class="add-container ion-padding">
     <ion-icon
@@ -31,9 +30,15 @@
           </p>
           <p>
             <ion-icon name="school-outline"></ion-icon>
-            {{ data.controls.degree.value }}'s degree ({{
-              data.controls.graduationYear.value
-            }}, {{ data.controls.grade.value }})
+            {{
+              'educationInfo.degreeYearGradeMessage'
+                | translate
+                  : {
+                      degree: data.controls.degree.value,
+                      graduationYear: data.controls.graduationYear.value,
+                      grade: data.controls.grade.value
+                    }
+            }}
           </p>
         </ion-label>
       </ion-item>
