Handle the Safe Area in our side menus

--- a/frontend/src/app/rating/hr-side-menu/hr-side-menu.component.html
+++ b/frontend/src/app/rating/hr-side-menu/hr-side-menu.component.html
@@ -1,7 +1,7 @@
 <ion-menu side="end" contentId="hr-side-menu">
   <ion-content>
     <div class="side-menu-container">
-      <h1 class="side-menu-heading">Progress</h1>
+      <h1 class="side-menu-headline">Progress</h1>
 
       <ion-list lines="none">
         <ng-container
