--- a/frontend/src/app/forms/side-menu/side-menu.component.scss
+++ b/frontend/src/app/forms/side-menu/side-menu.component.scss
@@ -1,5 +1,8 @@
 .side-menu-container {
   padding: 2rem;
+  margin-top: var(--ion-safe-area-top);
+  margin-right: var(--ion-safe-area-right);
+  margin-bottom: var(--ion-safe-area-bottom);
 }
 .side-menu-headline {
   margin-top: 0;
