--- a/frontend/src/app/forms/steps/contact-info/contact-info.component.html
+++ b/frontend/src/app/forms/steps/contact-info/contact-info.component.html
@@ -1,5 +1,5 @@
 <div class="main-description">
-  <h1>{{ 'contactInfo.contactInformation' | translate }}</h1>
+  <h1>{{ 'contactInfo.title' | translate }}</h1>
 
   <span *ngIf="formsData.controls.basicInfo.controls.firstName.valid">
     {{
