--- a/frontend/src/app/forms/steps/documents/documents.component.html
+++ b/frontend/src/app/forms/steps/documents/documents.component.html
@@ -1,5 +1,5 @@
 <div class="main-description">
-  <h1>{{ 'documentsUpload.documents' | translate }}</h1>
+  <h1>{{ 'documentsUpload.title' | translate }}</h1>
 
   {{ 'documentsUpload.stepDescription' | translate }}
 </div>
