--- a/frontend/src/app/forms/steps/education-info/education-info.component.html
+++ b/frontend/src/app/forms/steps/education-info/education-info.component.html
@@ -1,5 +1,5 @@
 <div class="main-description">
-  <h1>{{ 'educationInfo.educationInformation' | translate }}</h1>
+  <h1>{{ 'educationInfo.title' | translate }}</h1>
 
   {{ 'educationInfo.stepDescription' | translate }}
 
