--- a/frontend/src/app/forms/steps/key-competencies/key-competencies.component.html
+++ b/frontend/src/app/forms/steps/key-competencies/key-competencies.component.html
@@ -1,8 +1,7 @@
 <div class="main-description">
-  <h1>Key Competencies</h1>
+  <h1>{{ 'keyCompetencies.title' | translate }}</h1>
 
-  Now, please select and rate your key competencies. We expect you to add at
-  least one entry to "Languages" in order to complete this step.
+  {{ 'keyCompetencies.stepDescription' | translate }}
 
   <ion-list class="ion-margin-top">
     <ion-item
