--- a/frontend/src/app/forms/steps/profile-picture/profile-picture.component.html
+++ b/frontend/src/app/forms/steps/profile-picture/profile-picture.component.html
@@ -1,5 +1,5 @@
 <div class="main-description">
-  <h1>{{ 'profilePicture.picture' | translate }}</h1>
+  <h1>{{ 'profilePicture.title' | translate }}</h1>
 </div>
 <div
   *ngIf="
