Handle the top Safe Area on our confirmation page

--- a/frontend/src/app/forms/confirmation/confirmation.page.html
+++ b/frontend/src/app/forms/confirmation/confirmation.page.html
@@ -1,4 +1,4 @@
-<ion-content>
+<ion-content class="without-ion-header">
   <div class="main-container with-bottom-buttons">
     <div class="content">
       <div class="main-description">
