--- a/HR-Monitor/src/View/storageView.fxml
+++ b/HR-Monitor/src/View/storageView.fxml
@@ -9,6 +9,7 @@
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Text?>
+<?import javafx.scene.control.Button?>
 
 <BorderPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
     <top>
@@ -16,6 +17,8 @@
             <items>
                 <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Search Applicant:" />
                 <TextField fx:id="searchField" promptText="Last Name" translateX="15.0" />
+                <Button id="refreshButton" fx:id="refresh" onAction="#onRefresh" text="refresh"/>
+            	<Button id="logoutButton" fx:id="logout" onAction="#onLogout" text="Logout"/> 
             </items>
         </ToolBar>
     </top>
