Additional info step strings added to I18N

--- a/frontend/src/app/forms/side-menu/side-menu.component.html
+++ b/frontend/src/app/forms/side-menu/side-menu.component.html
@@ -87,7 +87,7 @@
           [ngTemplateOutlet]="menuItem"
           [ngTemplateOutletContext]="{
             step: APPLICATION_STEP.AdditionalInformation,
-            displayName: 'Additional Information',
+            displayName: displayNames.additionalInfo,
             isValid: formsData.controls.additionalInfo.valid,
             isActive: currentStep === APPLICATION_STEP.AdditionalInformation
           }"
