--- a/frontend/src/app/forms/steps/additional-info/additional-info.component.html
+++ b/frontend/src/app/forms/steps/additional-info/additional-info.component.html
@@ -1,10 +1,11 @@
 <div class="main-description">
-  <h1>Additional Information</h1>
-  Here you can add additional information that you want to include in the
-  application.
+  <h1>{{ 'additionalInfo.title' | translate }}</h1>
+  {{ 'additionalInfo.stepDescription' | translate }}
 </div>
 <ion-item class="ion-no-padding">
-  <ion-label position="floating">Additional Information</ion-label>
+  <ion-label position="floating">{{
+    'additionalInfo.title' | translate
+  }}</ion-label>
   <ion-textarea
     auto-grow="true"
     [formControl]="formsData.controls.additionalInfo.controls.additionalInfo"
