--- a/frontend/src/app/forms/steps/key-competencies/rating-modal/rating-modal.component.html
+++ b/frontend/src/app/forms/steps/key-competencies/rating-modal/rating-modal.component.html
@@ -8,7 +8,10 @@
   </ion-toolbar>
 
   <ion-toolbar>
-    <ion-searchbar [formControl]="searchInput"></ion-searchbar>
+    <ion-searchbar
+      [formControl]="searchInput"
+      placeholder="{{ 'commonLables.search' | translate }}"
+    ></ion-searchbar>
   </ion-toolbar>
 </ion-header>
 
